--- a/.github/workflows/tf_plan.yml
+++ b/.github/workflows/tf_plan.yml
@@ -9,7 +9,7 @@ env:
   TERRAFORM_VERSION: 1.9.8
   TERRAGRUNT_VERSION: 0.68.2
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID}}
-  ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_TF_STATE_SUBSCRIPTION_ID}}
+  ARM_TF_STATE_SUBSCRIPTION_ID: ${{ secrets.ARM_TF_STATE_SUBSCRIPTION_ID}}
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
   AZURE_RESOURCES_RESOURCE_GROUP_NAME: ${{ secrets.AZURE_RESOURCES_RESOURCE_GROUP_NAME}}
   AZURE_RESOURCES_STORAGE_ACCOUNT_NAME: ${{ secrets.AZURE_RESOURCES_STORAGE_ACCOUNT_NAME}}
@@ -35,7 +35,7 @@ jobs:
         with:
           tenant-id: ${{ env.ARM_TENANT_ID }}
           client-id: ${{ env.ARM_CLIENT_ID }}
-          subscription-id: ${{ env.ARM_SUBSCRIPTION_ID }}
+          subscription-id: ${{ env.ARM_TF_STATE_SUBSCRIPTION_ID}}
 
       - name: Terraform plan
         uses: cds-snc/terraform-plan@8986e57fae5b6758df6b977b9813b11622eac395 #v3.3.1
