--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     license: MIT
 spec:
-  type: website
+  type: library
   lifecycle: experimental
-  owner: internal-sre
+  owner: group:cds-snc/internal-sre 
+  domain: site-reliability-engineering
+  system: cds-azure-landing-zone
